# clirpgram

./: Cargo.toml  README.md  config_sample.toml
src/: main.rs  main_old.rs  models.rs
src/api_adapter/: client.rs  mod.rs  models.rs  setup.rs  utils.rs
src/app/: mod.rs
src/application/: configuration.rs  mod.rs  start_battle.rs
src/entities/: mod.rs  types.rs
src/entities/models/: app.rs  menu.rs  mod.rs  widgets.rs
src/features/: clicks.rs  mod.rs
src/pages/: display.rs  interface.rs  mod.rs
src/shared/api/: client.rs  mod.rs  models.rs  setup.rs  utils.rs
src/shared/api/threads/: client.rs  mod.rs  worker.rs
src/shared/config/: app.rs  clicks.rs  consts.rs  mod.rs
src/ui/: battlefield.rs  mod.rs  moves.rs  players.rs  results.rs  screen.rs  suggestions.rs
src/ui/pages/: connect.rs  main.rs  menu.rs  mod.rs  start.rs
src/widgets/: controller.rs  display.rs  mod.rs
