[package]
name = "refactor_cli_rpg_game_frontend_prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
queue = "0.3.1"
queues = "1.1.0"
rand = "0.8.5"
ratatui = "0.28.1"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
rodio = "0.19.0"
serde = { version = "1.0.209", features = ["derive"] }
symphonia = "0.5.4"
log = "0.4.22"
cpal = "0.15.3"
rb = "0.4.1"
rubato = "0.16.0"
arrayvec = "0.7.6"
dyn-clone = "1.0.17"
